@@ -2,20 +2,13 @@ package org.layer.domain.actionItem.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
-import org.layer.domain.actionItem.controller.dto.CreateActionItemResponse;
-import org.layer.domain.actionItem.controller.dto.DeleteActionItemResponse;
-import org.layer.domain.actionItem.controller.dto.MemberActionItemResponse;
-import org.layer.domain.actionItem.controller.dto.SpaceActionItemElementResponse;
-import org.layer.domain.actionItem.controller.dto.SpaceActionItemResponse;
+import org.layer.domain.actionItem.controller.dto.*;
 import org.layer.domain.actionItem.entity.ActionItem;
 import org.layer.domain.actionItem.repository.ActionItemRepository;
-import org.layer.domain.member.exception.MemberException;
 import org.layer.domain.retrospect.entity.Retrospect;
 import org.layer.domain.retrospect.repository.RetrospectRepository;
 import org.layer.domain.space.entity.MemberSpaceRelation;
 import org.layer.domain.space.entity.Space;
-import org.layer.domain.space.entity.SpaceCategory;
 import org.layer.domain.space.exception.MemberSpaceRelationException;
 import org.layer.domain.space.repository.MemberSpaceRelationRepository;
 import org.layer.domain.space.repository.SpaceRepository;
@@ -24,16 +17,15 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import static org.layer.common.exception.MemberExceptionType.FORBIDDEN;
 import static org.layer.common.exception.MemberSpaceRelationExceptionType.NOT_FOUND_MEMBER_SPACE_RELATION;
 import static org.layer.domain.actionItem.enums.ActionItemStatus.PROCEEDING;
+import static org.layer.domain.retrospect.entity.RetrospectStatus.DONE;
 
 @Slf4j
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 @Service
 public class ActionItemService {
     private final ActionItemRepository actionItemRepository;
@@ -42,7 +34,7 @@ public class ActionItemService {
     private final SpaceRepository spaceRepository;
 
     @Transactional
-    public CreateActionItemResponse createActionItem(Long memberId, Long retrospectId, String content) {
+    public void createActionItem(Long memberId, Long retrospectId, String content) {
 
         // 멤버가 해당 회고가 진행 중인 스페이스에 속하는지 확인
         Retrospect retrospect = retrospectRepository.findByIdOrThrow(retrospectId);
@@ -60,143 +52,116 @@ public class ActionItemService {
                 .content(content)
                 .actionItemStatus(PROCEEDING)
                 .build());
-
-        return new CreateActionItemResponse(memberId, retrospect.getSpaceId());
     }
 
-    public List<MemberActionItemResponse> getMemberActionItemList(Long currentMemberId, Long memberId) {
-        // 현재 로그인된 회원과 액션 아이템 리스트의 주인 회원이 일치하지 않음
-        if(!memberId.equals(currentMemberId)) {
-            throw new MemberException(FORBIDDEN);
-        }
 
-        List<ActionItem> actionItemList = actionItemRepository.findAllByMemberIdAndActionItemStatusOrderByCreatedAtDesc(memberId, PROCEEDING);
+    public GetSpaceRetrospectActionItemResponse getSpaceActionItemList(Long memberId, Long spaceId) {
+        // space가 존재하는지 확인
+        Space space = spaceRepository.findByIdOrThrow(spaceId);
 
-        return processMemberActionItems(actionItemList);
-    }
-
-    public SpaceActionItemResponse getSpaceActionItemList(Long memberId, Long spaceId) {
         // 현재 로그인한 회원이 회고 스페이스에 속하는지 확인
         Optional<MemberSpaceRelation> team = memberSpaceRelationRepository.findBySpaceIdAndMemberId(spaceId, memberId);
         if(team.isEmpty()) {
             throw new MemberSpaceRelationException(NOT_FOUND_MEMBER_SPACE_RELATION);
         }
 
-        List<ActionItem> actionItemList = actionItemRepository.findAllBySpaceIdAndActionItemStatusOrderByCreatedAtDesc(spaceId, PROCEEDING);
+        // 끝난 회고 모두 찾기
+        List<Retrospect> doneRetrospects = retrospectRepository.findAllBySpaceId(spaceId)
+                .stream()
+                .filter(retrospect -> retrospect.getRetrospectStatus().equals(DONE))
+                .sorted((a, b) -> b.getDeadline().compareTo(a.getDeadline()))
+                .toList();
 
-        // IN절로 수정
-        List<SpaceActionItemElementResponse> teamActionItemList = processSpaceActionItems(actionItemList);
+        List<RetrospectActionItemResponse> response = new ArrayList<>();
+        for (Retrospect doneRetrospect : doneRetrospects) {
+            List<ActionItem> actionItems = actionItemRepository.findAllByRetrospectId(doneRetrospect.getId());
+            List<ActionItemResponse> actionItemResponses = actionItems.stream()
+                    .map(ActionItemResponse::of)
+                    .toList();
 
-        // space 찾기
-        Space space = spaceRepository.findByIdOrThrow(spaceId);
-        
-        return SpaceActionItemResponse.builder()
-                .spaceId(spaceId)
-                .spaceName(space.getName())
-                .teamActionItemList(teamActionItemList)
-                .build();
+            RetrospectActionItemResponse responseElement = RetrospectActionItemResponse.builder()
+                    .retrospectId(doneRetrospect.getId())
+                    .retrospectTitle(doneRetrospect.getTitle())
+                    .actionItemList(actionItemResponses)
+                    .build();
+
+            response.add(responseElement);
+        }
+
+        return GetSpaceRetrospectActionItemResponse.of(space, response);
     }
 
     @Transactional
-    public DeleteActionItemResponse deleteActionItem(Long memberId, Long actionItemId) {
+    public void deleteActionItem(Long memberId, Long actionItemId) {
         ActionItem actionItem = actionItemRepository.findByIdOrThrow(actionItemId);
-
         // 액션 아이템을 작성한 사람이 맞는지 확인
         actionItem.isWriter(memberId);
-
         actionItemRepository.delete(actionItem);
+    }
 
-        return new DeleteActionItemResponse(actionItemId);
+    // space에서 모든 끝난 회고에 대한 실행 목표 조회
+    public GetSpaceActionItemResponse getSpaceRecentActionItems(Long memberId, Long spaceId) {
+        // 스페이스가 있는지 검증
+        Space space = spaceRepository.findByIdOrThrow(spaceId);
+        
+        // 멤버가 스페이스에 속하는지 검증
+        memberSpaceRelationRepository.findBySpaceIdAndMemberId(spaceId, memberId);
+
+        List<Retrospect> retrospectList = retrospectRepository.findAllBySpaceId(spaceId);
+
+        // 종료된 것 중 가장 최근에 만들어진 회고 찾기
+        Optional<Retrospect> recentOpt = retrospectList.stream()
+                .filter(r -> r.getRetrospectStatus().equals(DONE)) // 끝난 회고 찾기
+                .sorted((a, b) -> b.getDeadline().compareTo(a.getDeadline())) // deadline 내림차순으로 정렬
+                .findFirst();
+
+        if(recentOpt.isPresent()) {
+            Retrospect recent = recentOpt.get();
+            List<ActionItem> actionItems = actionItemRepository.findAllByRetrospectId(recent.getId());
+            return GetSpaceActionItemResponse.of(space, recent, actionItems);
+        }
+        return null;
     }
 
 
+    public MemberActionItemResponse getMemberActionItemList(Long currentMemberId) {
+        // 멤버가 속한 스페이스 모두 가져오기
+        List<MemberSpaceRelation> memberSpaceRelations = memberSpaceRelationRepository.findAllByMemberId(currentMemberId);
+        List<Space> spaces = memberSpaceRelations.stream().map(MemberSpaceRelation::getSpace).toList(); // TODO: N+1 쿼리 나갈것 같은데.. 함 봐야겠다
 
-    // getMemberActionItemList 메서드에서 사용 (쿼리 IN절로 수정 로직)
-    private List<MemberActionItemResponse> processMemberActionItems(List<ActionItem> actionItemList) {
-        List<MemberActionItemResponse> memberActionItemList = new ArrayList<>();
-        List<Long> spaceIds = actionItemList.stream()
-                .map(ActionItem::getSpaceId)
-                .collect(Collectors.toList());
+        // 스페이스에서 상태가 Done인 회고 모두 가져오기
+        List<Long> spaceIds = spaces.stream().map(Space::getId).toList();
+        List<Retrospect> doneRetrospects = retrospectRepository.findAllBySpaceIdIn(spaceIds).stream()
+                .filter(s -> s.getRetrospectStatus().equals(DONE))
+                .toList();
 
-        List<Long> retrospectIds = actionItemList.stream()
-                .map(ActionItem::getRetrospectId)
-                .collect(Collectors.toList());
+        // 액션 아이템 모두 뽑아오기
+        List<Long> idList = doneRetrospects.stream().map(Retrospect::getId).toList();
+        List<ActionItem> actionItemList = actionItemRepository.findAllByRetrospectIdIn(idList).stream()
+                .sorted((a, b) -> {
+                    if(a.getIsPinned() && b.getIsPinned()
+                            && a.getActionItemStatus().equals(b.getActionItemStatus())) {
+                        return b.getCreatedAt().compareTo(a.getCreatedAt()); // 둘다 핀 돼있고, 상태도 같으면 최신 순
+                    } else if(a.getIsPinned() && b.getIsPinned()) {
+                        return a.getActionItemStatus().getPriority() - b.getActionItemStatus().getPriority();
+                    } else if(a.getIsPinned() || b.getIsPinned()) {
+                        return a.getIsPinned() ? -1 : 1;
+                    } else if(!a.getActionItemStatus().equals(b.getActionItemStatus())) {
+                        return a.getActionItemStatus().getPriority() - b.getActionItemStatus().getPriority();
+                    } else {
+                        return b.getCreatedAt().compareTo(a.getCreatedAt()); // 둘다 핀 돼있고, proceeding 이면 최신 순
+                    }
+                }).toList();
 
-        // 스페이스, 회고 정보 가져오기
-        List<Space> spaces = spaceRepository.findByIdIn(spaceIds);
-        List<Retrospect> retrospects = retrospectRepository.findByIdIn(retrospectIds);
-
-        // Map으로 매핑
-        Map<Long, Space> spaceMap = spaces.stream()
-                .collect(Collectors.toMap(
-                        Space::getId,
-                        space -> space
-                ));
-
-        Map<Long, Retrospect> retrospectMap = retrospects.stream()
-                .collect(Collectors.toMap(
-                        Retrospect::getId,
-                        retrospect -> retrospect
-                ));
-
-
-        // 회원의 액션 아이템 리스트에 추가
+        List<MemberActionItemElementResponse> response = new ArrayList<>();
         for (ActionItem actionItem : actionItemList) {
-            Space space = spaceMap.get(actionItem.getSpaceId());
-            Retrospect retrospect = retrospectMap.get(actionItem.getRetrospectId());
+            Space space = spaceRepository.findByIdOrThrow(actionItem.getSpaceId());
+            Retrospect retrospect = retrospectRepository.findByIdOrThrow(actionItem.getRetrospectId());
 
-            // TODO: 이런 상황에서 어떻게 할지 좀 더 고민 필요
-            if (space == null || retrospect == null) {
-                continue; // 회고 또는 스페이스가 삭제되고 액션 아이템이 남은 상황
-            }
-
-            boolean isTeam = space.getCategory().equals(SpaceCategory.TEAM);
-            memberActionItemList.add(MemberActionItemResponse.toResponse(actionItem, space.getName(), retrospect.getTitle(), isTeam));
+            MemberActionItemElementResponse responseElement = MemberActionItemElementResponse.of(space, retrospect, actionItem);
+            response.add(responseElement);
         }
 
-        return memberActionItemList;
+        return new MemberActionItemResponse(response);
     }
-
-
-    // getMemberActionItemList 메서드에서 사용 (쿼리 IN절로 수정 로직)
-    private List<SpaceActionItemElementResponse> processSpaceActionItems(List<ActionItem> actionItemList) {
-        List<SpaceActionItemElementResponse> spaceActionItemList = new ArrayList<>();
-
-        // 회고 아이디 추출
-        List<Long> retrospectIds = actionItemList.stream()
-                .map(ActionItem::getRetrospectId)
-                .collect(Collectors.toList());
-
-        // 회고 정보 가져오기
-        List<Retrospect> retrospects = retrospectRepository.findByIdIn(retrospectIds);
-
-        // Map으로 매핑
-        Map<Long, Retrospect> retrospectMap = retrospects.stream()
-                .collect(Collectors.toMap(
-                        Retrospect::getId,
-                        retrospect -> retrospect
-                ));
-
-
-        // 스페이스 액션 아이템 리스트에 추가
-        for (ActionItem actionItem : actionItemList) {
-            Retrospect retrospect = retrospectMap.get(actionItem.getRetrospectId());
-
-            // TODO: 이런 상황에서 어떻게 할지 좀 더 고민 필요
-            if (retrospect == null) {
-                continue; // 회고가 삭제되고 액션 아이템이 남은 상황
-            }
-
-            spaceActionItemList.add(SpaceActionItemElementResponse.builder()
-                    .actionItemId(actionItem.getId())
-                    .retrospectName(retrospect.getTitle())
-                    .actionItemContent(actionItem.getContent())
-                    .build());
-        }
-
-        return spaceActionItemList;
-    }
-
-
-
 }
